Day 8: Started portfolio with HTML structure, added 'Back' link to bio, updated CSS styles

--- a/bio.html
+++ b/bio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Виктор Белёвцев - Визитка</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/bio.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,7 @@
     <main>
         <section>
             <h2>Обо мне</h2>
-            <img src="avatar.jpg" alt="Мой аватар" class="avatar">
+            <img src="/images/pics/avatar.jpg" alt="Мой аватар" class="avatar">
             <p>Привет! Я начинающий full-stack разработчик, изучаю веб-разработку.</p>
             <h3>Мои навыки</h3>
             <ul>
@@ -38,6 +38,7 @@
     </main>
     <footer>
         <p>© 2025 Виктор Белёвцев. Все права защищены.</p>
+        <a href="portfolio.html" class="back-button">Назад</a>
     </footer>
 </body>
 </html>
