--- a/bio/bio.html
+++ b/bio/bio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Виктор Белёвцев - Визитка</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/bio.css">
+    <link rel="stylesheet" href="/bio/styles/bio.css">
 </head>
 <body>
     <header>
@@ -38,7 +38,7 @@
     </main>
     <footer>
         <p>© 2025 Виктор Белёвцев. Все права защищены.</p>
-        <a href="portfolio.html" class="back-button">Назад</a>
+        <a href="/index.html" class="back-button">Назад</a>
     </footer>
 </body>
 </html>
